overflow css fixes for tabs

--- a/force-app/main/default/lwc/tabBar/tabBar.css
+++ b/force-app/main/default/lwc/tabBar/tabBar.css
@@ -1,3 +1,10 @@
+/*.navDiv {
+    width: 100%;
+    display: inline-flex
+}*/
 ul {
-    width: 100vw;
+    display: block;
+}
+li.slds-tabs_default__item {
+    display: inline-flex;
 }
